fix(3bd0024): overflow footer text
css: add padding to all children inside card blocks

--- a/src/components/GoodCard/style.css
+++ b/src/components/GoodCard/style.css
@@ -1,6 +1,6 @@
 .good-card {
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
 
   box-shadow: var(--card-shadow) black;
 }
@@ -19,8 +19,15 @@
 
 .good-card__footer {
   width: 100%;
+  height: 100%;
+
   text-align: center;
+  overflow-wrap: break-word;
 
   border: var(--card-border) solid;
   border-top: 0;
+}
+.good-card__main > *,
+.good-card__footer > * {
+  padding: var(--card-items-padding);
 }
