--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
   --image-max-width: 8rem;
   --card-border: 0.1rem;
   --card-shadow: 0.15rem 0.15rem 0 0;
+  --card-items-padding: 0.25rem;
 }
 
 *,
